[gd_scene load_steps=3 format=3 uid="uid://lr2y6hh7bkyg"]

[ext_resource type="Script" path="res://screens/endScreen/score_menu.gd" id="1_ja3j3"]
[ext_resource type="Texture2D" uid="uid://cw6st188lcks1" path="res://screens/endScreen/endscreen.png" id="2_j7pcj"]

[node name="ScoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ja3j3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 500.0
offset_right = 1250.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Endscreen" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(173.556, 33)
scale = Vector2(1.0463, 1.0463)
texture = ExtResource("2_j7pcj")

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: "
horizontal_alignment = 1

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
